file(GLOB PROJECTS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")

if(PROJECTS)
  list(SORT PROJECTS)
  foreach(pro ${PROJECTS})
    if(${pro} STREQUAL "CMakeLists.txt")
    else()
      option(BUILD_${pro} "build ${pro}" OFF)
      if(BUILD_${pro})
        message(STATUS option: BUILD_${pro}-->ON)
        add_subdirectory(${pro})
      else()
        message(STATUS option: BUILD_${pro}-->OFF)
      endif()
    endif()
  endforeach()
endif()